--- a/mass-migration/azure-pipelines.yml
+++ b/mass-migration/azure-pipelines.yml
@@ -1,6 +1,11 @@
 # ============================================================================
 # Azure DevOps Pipeline for Mass Migration Azure Functions
-# Triggers on push to GitHub repo: phinestsoftware/rogers-mass-migration
+# ============================================================================
+# This pipeline builds, tests, and deploys to the DEV environment only.
+#
+# For QA and Production deployments, a separate pipeline should be created
+# in the customer's Azure DevOps account. See docs/AZURE-DEVOPS-SETUP.md
+# for instructions on adding additional deployment stages.
 # ============================================================================
 
 trigger:
@@ -139,66 +144,3 @@ stages:
                     runtimeStack: 'NODE|20'
                     deploymentMethod: 'zipDeploy'
 
-  # ============================================
-  # DEPLOY TO QA (with approval)
-  # ============================================
-  - stage: DeployQA
-    displayName: 'Deploy to QA'
-    dependsOn: DeployDev
-    condition: succeeded()
-
-    jobs:
-      - deployment: DeployToQA
-        displayName: 'Deploy to QA Function App'
-        environment: 'mass-migration-qa'
-        pool:
-          vmImage: 'ubuntu-latest'
-
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - download: current
-                  artifact: function-app
-
-                - task: AzureFunctionApp@2
-                  displayName: 'Deploy Azure Function'
-                  inputs:
-                    connectedServiceNameARM: 'Azure-MassMigration-QA'
-                    appType: 'functionAppLinux'
-                    appName: '$(qaFunctionAppName)'
-                    package: '$(Pipeline.Workspace)/function-app/$(Build.BuildId).zip'
-                    runtimeStack: 'NODE|20'
-                    deploymentMethod: 'zipDeploy'
-
-  # ============================================
-  # DEPLOY TO PROD (with approval)
-  # ============================================
-  - stage: DeployProd
-    displayName: 'Deploy to Prod'
-    dependsOn: DeployQA
-    condition: succeeded()
-
-    jobs:
-      - deployment: DeployToProd
-        displayName: 'Deploy to Prod Function App'
-        environment: 'mass-migration-prod'
-        pool:
-          vmImage: 'ubuntu-latest'
-
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - download: current
-                  artifact: function-app
-
-                - task: AzureFunctionApp@2
-                  displayName: 'Deploy Azure Function'
-                  inputs:
-                    connectedServiceNameARM: 'Azure-MassMigration-Prod'
-                    appType: 'functionAppLinux'
-                    appName: '$(prodFunctionAppName)'
-                    package: '$(Pipeline.Workspace)/function-app/$(Build.BuildId).zip'
-                    runtimeStack: 'NODE|20'
-                    deploymentMethod: 'zipDeploy'
