--- a/mass-migration/package.json
+++ b/mass-migration/package.json
@@ -19,6 +19,7 @@
     "db:seed": "ts-node infra/scripts/seed-db.ts"
   },
   "dependencies": {
+    "@azure/communication-email": "^1.1.0",
     "@azure/functions": "^4.5.0",
     "@azure/identity": "^4.2.0",
     "@azure/keyvault-secrets": "^4.8.0",
