--- a/mass-migration/azure-pipelines.yml
+++ b/mass-migration/azure-pipelines.yml
@@ -40,7 +40,7 @@ stages:
       - job: BuildAndTest
         displayName: 'Build, Lint, Test'
         pool:
-          vmImage: 'ubuntu-latest'
+          name: 'Default'  # Self-hosted agent pool
 
         steps:
           - checkout: self
@@ -125,7 +125,7 @@ stages:
         displayName: 'Deploy to Dev Function App'
         environment: 'mass-migration-dev'
         pool:
-          vmImage: 'ubuntu-latest'
+          name: 'Default'  # Self-hosted agent pool
 
         strategy:
           runOnce:
