add dynatrace monitoring

--- a/mass-migration/package.json
+++ b/mass-migration/package.json
@@ -25,6 +25,12 @@
     "@azure/keyvault-secrets": "^4.8.0",
     "@azure/storage-blob": "^12.17.0",
     "@azure/storage-queue": "^12.16.0",
+    "@dynatrace/opentelemetry-azure-functions": "^1.0.0",
+    "@dynatrace/opentelemetry-core": "^1.0.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/sdk-trace-node": "^1.25.0",
+    "@opentelemetry/resources": "^1.25.0",
+    "@opentelemetry/semantic-conventions": "^1.25.0",
     "csv-parse": "^5.5.3",
     "csv-stringify": "^6.4.5",
     "date-fns": "^3.3.1",
